// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenu should render correctly expanded 1`] = `
<div
  className="dropdownWrapper"
>
  <div
    className="container active"
  >
    <div
      className="head"
      onClick={[Function]}
    >
      <p>
        Test
      </p>
      <div
        className="iconWrapper"
      >
        <svg
          className="icon"
          fill="none"
          height={10}
          onClick={[Function]}
          width={14}
        >
          <path
            d="M0 0h14L7 10 0 0z"
            fill="#C4C4C4"
          />
        </svg>
      </div>
    </div>
    <div
      className="dropdownContent"
    >
      <div
        className="option"
        onClick={[Function]}
      >
        Profile
      </div>
      <div
        className="option"
        onClick={[Function]}
      >
        Settings*
      </div>
      <div
        className="option"
        onClick={[Function]}
      >
        Notifications*
      </div>
      <div
        className="option"
        onClick={[Function]}
      >
        Contacts*
      </div>
      <div
        className="option"
        onClick={[Function]}
      >
        Logout
      </div>
    </div>
  </div>
</div>
`;

exports[`DropdownMenu should render correctly not expanded 1`] = `
<div
  className="dropdownWrapper"
>
  <div
    className="container"
  >
    <div
      className="head"
      onClick={[Function]}
    >
      <div
        className="iconWrapper"
      >
        <svg
          className="icon"
          fill="none"
          height={10}
          onClick={[Function]}
          width={14}
        >
          <path
            d="M0 0h14L7 10 0 0z"
            fill="#C4C4C4"
          />
        </svg>
      </div>
    </div>
    <div
      className="dropdownContent hide"
    >
      <div
        className="option"
        onClick={[Function]}
      >
        Profile
      </div>
      <div
        className="option"
        onClick={[Function]}
      >
        Settings*
      </div>
      <div
        className="option"
        onClick={[Function]}
      >
        Notifications*
      </div>
      <div
        className="option"
        onClick={[Function]}
      >
        Contacts*
      </div>
      <div
        className="option"
        onClick={[Function]}
      >
        Logout
      </div>
    </div>
  </div>
</div>
`;
